= mageo changelog

== Master (for 0.0.4)

== Version (for 0.0.3) [2014-08-30] released
* Mageo::Vector3D#to_v3di is changed not to need an argument.
* Mageo::Vector3D#internal_coordinates is added (old to_v3di(axes)).
* Mageo::Polyhedron#translate  is added.
* Mageo::Polyhedron#translate! is added.
* Mageo::Polyhedron#shared_vertices is added.
* Update dependency on otehr gems.

== Version (for 0.0.2) [2013-04-18] released
* Make a namespace 'Mageo'.
* Most of classes are included into the namespace 'Mageo'.
* Adjust to malge-0.0.8
* Move Tetrahedron to Mageo::Tetrahedron
* Set default value of tolerance=0.0 in argument of Polyhedron#include?
* Adjust to builtinextension-0.1.0.

== Version (for 0.0.1)
* Change indent style from tab char to two spaces.
* Adjust to malge 0.0.2.

== Version 0.0.0